# fastplate

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 0ff9db13291a_create_children_table.py  1d49264c9384_update_fields_from_table_movies.py  23c3fa903373_create_movies_table.py  4fe7633497a3_create_users_table.py  609b500a2a78_create_addresses_table.py  644bc9b9363c_create_users_table.py
app/: main.py
app/config/: database.py
app/controllers/: movie_controller.py
app/models/: child.py  movie.py  user.py
app/schemas/: movie_schema.py
