[tool.poetry]
name = "fastplate"
version = "0.1.0"
description = ""
authors = ["Willians Pereira <willians@4vconnect.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
alembic = "^1.13.0"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
